<resources>
    <string name="app_name">DeliveryTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ManagerApp_LoginActivity_EnterCodeHint">Invitation code</string>
    <string name="ManagerApp_LoginActivity_EnterPasswordHint">Password</string>
    <string name="ManagerApp_LoginActivity_Login">Sign in</string>
    <string name="ManagerApp_LoginActivity_ForgotPassword">Forgot password</string>
    <string name="ManagerApp_LoginActivity_CreateInstance">You can add your company</string>
    <string name="ManagerApp_CreateInstanceActivity_CompanyRegistration">Company registration</string>
    <string name="ManagerApp_LoginActivity_Register">Register</string>
    <string name="ManagerApp_CodeHintIcon" translatable="false">Code hint icon</string>
    <string name="ManagerApp_PasswordHintIcon" translatable="false">Password hint icon</string>
    <string name="ManagerApp_MainActivity" translatable="false">Main logo</string>
    <string name="ManagerApp_CreateInstanceActivity_InstanceNameHint">Company name</string>
    <string name="ManagerApp_EnterNameHint">Name</string>
    <string name="ManagerApp_EnterSurnameHint">Surname</string>
    <string name="ManagerApp_EnterPhoneNumberHint">Phone number</string>
    <string name="ManagerApp_Toolbar_Done">Continue</string>
    <string name="ManagerApp_ConfirmDataActivity_Confirm">Confirm</string>
    <string name="ManagerApp_MainActivity_Tasks">Tasks</string>
    <string name="ManagerApp_MainActivity_Staff">Staff</string>
    <string name="ManagerApp_MainActivity_Catalogs">Catalogs</string>
    <string name="ManagerApp_MainActivity_Settings">Settings</string>
    <string name="ManagerApp_MainActivity_Managers">Managers</string>
    <string name="ManagerApp_MainActivity_Performers">Performers</string>
    <string name="ManagerApp_MainActivity_MyTasks">My tasks</string>
    <string name="ManagerApp_Toolbar_Edit">Edit</string>
    <string name="ManagerApp_Toolbar_AddUser">Add user</string>
    <string name="ManagerApp_Toolbar_ShowOnMap">Show on map</string>
    <string name="ManagerApp_Toolbar_AddTask">Add Task</string>
    <string name="ManagerApp_Toolbar_DeleteUser">Delete</string>
    <string name="ManagerApp_Cancel">Cancel</string>
    <string name="ManagerApp_Toolbar_Finish">Finish</string>
    <string name="ManagerApp_AddUserFragment_ShareCode">Share code with your colleague</string>
    <string name="ManagerApp_UserListFragment_EmptyList">Nothing\'s here yet</string>
    <string name="ManagerApp_UserListFragment_DeleteUserModalContent">Are you sure you want to delete selected users?</string>
    <string name="ManagerApp_DeleteButton">delete</string>
    <string-array name="roles_array">
        <item>@string/ServerMessage_Roles_ManagerRole</item>
        <item>@string/ServerMessage_Roles_PerformerRole</item>
    </string-array>

    <string name="ManagerApp_TaskFragment_CancelTask">Cancel task</string>
    <string name="ManagerApp_AddTaskFragment_Number">Number*</string>
    <string name="ManagerApp_AddTaskFragment_ShippingDesc">Shipping description</string>
    <string name="ManagerApp_AddTaskFragment_Details">Details</string>
    <string name="ManagerApp_AddTaskFragment_Address">Address</string>
    <string name="ManagerApp_AddTaskFragment_Performer">Performer</string>
    <string name="ManagerApp_AddTaskFragment_AddTaskButton">Add task</string>


    <string name="ManagerApp_LoginActivity_WrongRole">Wrong role</string>
    <string name="ManagerApp_LoginActivity_WrongCredentials">Wrong login/password</string>
    <string name="ManagerApp_UserListFragment_UserAvatarContentDesc">User avatar</string>
    <string name="ManagerApp_UserListFragment_OnlineStatusContentDesc">OnlineStatus</string>
    <string name="ManagerApp_UserListFragment_AdminContentDesc">Admin status</string>
    <string name="ManagerApp_UserListFragment_ChatContentDesc">Chat</string>
    <string name="ManagerApp_UserListFragment_PhoneContentDesc">Phone</string>
    <string name="ManagerApp_TasksListFragment_AddTaskButton">Add task</string>
    <string name="ManagerApp_TaskRepository_Error_ErrorTitle">Task error</string>
    <string name="ManagerApp_Dropdown_Top_Quantity"> (%d)</string>


    <string name="ManagerApp_SelectPerformersFragment_EmptyAddress">Address not defined</string>
</resources>
