<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_managers"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/ManagerApp_MainActivity_Managers" />

    <item
        android:id="@+id/navigation_performers"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/ManagerApp_MainActivity_Performers" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks_black_24dp"
        android:title="@string/ManagerApp_MainActivity_Tasks" />

    <item
        android:id="@+id/navigation_my_tasks"
        android:icon="@drawable/ic_tasks_black_24dp"
        android:title="@string/ManagerApp_MainActivity_MyTasks" />

</menu>
