<com.chauthai.swipereveallayout.SwipeRevealLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/swipeRevealLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:mode="same_level"
    app:dragEdge="right"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >
        <TextView
            android:id="@+id/tvDeleteUser"
            android:layout_width="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:background="@color/colorRed"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/ManagerApp_Toolbar_DeleteUser"
            android:layout_height="65dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rlUserItem"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivUserAvatar"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/ManagerApp_UserListFragment_UserAvatarContentDesc"
                android:src="@drawable/empty_avatar" />

            <ImageView
                android:id="@+id/ivOnlineStatus"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="2dp"
                android:layout_toEndOf="@id/ivUserAvatar"
                android:contentDescription="@string/ManagerApp_UserListFragment_OnlineStatusContentDesc"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/tvName"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/ivOnlineStatus"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSurname"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/tvName"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivAdminStatusIcon"
                android:layout_centerVertical="true"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/ManagerApp_UserListFragment_AdminContentDesc"
                android:src="@drawable/ic_star_gold_40dp" />

        </RelativeLayout>
    </FrameLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>


