<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    tools:context="com.kvteam.deliverytracker.managerapp.ui.confirm.ConfirmDataActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/etNameField"
            android:layout_width="match_parent"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:theme="@style/EditTextTheme"
            android:hint="@string/ManagerApp_EnterNameHint" />


        <ImageView
            android:contentDescription="@string/ManagerApp_CodeHintIcon"
            android:id="@+id/ivNameHintIcon"
            android:alpha="0.3"
            android:layout_marginTop="13dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/ic_assignment_ind_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/etSurnameField"
            android:layout_width="match_parent"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:theme="@style/EditTextTheme"
            android:hint="@string/ManagerApp_EnterSurnameHint" />


        <ImageView
            android:contentDescription="@string/ManagerApp_CodeHintIcon"
            android:id="@+id/ivSurnameHintIcon"
            android:alpha="0.3"
            android:layout_marginTop="13dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/ic_assignment_ind_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/etPhoneNumberField"
            android:layout_width="match_parent"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="phone"
            android:theme="@style/EditTextTheme"
            android:hint="@string/ManagerApp_EnterPhoneNumberHint" />


        <ImageView
            android:contentDescription="@string/ManagerApp_CodeHintIcon"
            android:id="@+id/ivPhoneNumberHintIcon"
            android:alpha="0.3"
            android:layout_marginTop="13dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/ic_phone_black_24dp" />

    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
