<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:gravity="center_vertical">

    <CheckBox
        android:id="@+id/cbSelectUser"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:theme="@style/BrandedCheckBox" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivUserAvatar"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/ManagerApp_UserListFragment_UserAvatarContentDesc"
                    android:src="@drawable/empty_avatar" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/ManagerApp_UserListFragment_OnlineStatusContentDesc"
                    android:src="@drawable/circle" />
                <ImageView
                    android:id="@+id/ivAdminStatusIcon"
                    android:visibility="invisible"
                    android:contentDescription="@string/ManagerApp_UserListFragment_AdminContentDesc"
                    android:src="@drawable/ic_star_gold_40dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="80dp"
            android:background="@drawable/rectangle" />
    </LinearLayout>
</LinearLayout>
